Safavid-Ottoman proyekti bitirildi.

--- a/index.html
+++ b/index.html
@@ -16,27 +16,80 @@
 </head>
 <body>
     <div class="bg-war h-100">
-        <div class="flex column">
+        <div class="flex column h-100">
             <div class="basis-10 flex between ai-center bg-008074bd ff-Kalam">
                 <img src="./img/3.png" alt="" class="iblock w-40 h-40 cover ml-10">
                 <h1 class="color-fff">Ottoman-Safavid Wars</h1>
                 <ul class="style-none flex between">
                     <li>
-                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff"><i class="fas fa-home mr-5"></i> Home</a></li>
+                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff">
+                            <i class="fas fa-home mr-5"></i> Home
+                        </a>
+                    </li>
                     <li>
-                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff"><i class="fas fa-eject mr-5"></i> About</a></li>
+                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff">
+                            <i class="fas fa-eject mr-5"></i> About
+                        </a>
+                    </li>
                     <li>
-                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff"><i class="fab fa-jedi-order mr-5"></i> Wars</a></li>
+                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff">
+                            <i class="fab fa-jedi-order mr-5"></i> Wars
+                        </a>
+                    </li>
                     <li>
-                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff"><i class="far fa-address-book mr-5"></i> Contact</a></li>
+                        <a href="#" class="decoration-none iblock bg-crimson r-10 p-5 mr-10 color-fff">
+                            <i class="far fa-address-book mr-5"></i> Contact
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <div class="grow flex column b-red">
-                <div class="basis-50 flex between">
+            <div class="grow flex column between">
+                <div class="basis-20 flex between">
                     <img src="./img/4.jpg" alt="" class="iblock SahIsmayil r-50">
                     <img src="./img/2.jpg" alt="" class="iblock SultanSelim r-50">
                 </div>
-                <div class="grow"></div>
+                <div class="cards basis-60 flex evenly ai-center">
+                    <div class="card basis-20 h-80 relative">
+                        <div class="card_front w-100 h-100 absolute top-0 left-0 flex">
+                            <img src="./img/4.jpg" alt="" class=" h-100 w-50 cover position-r r-l-30">
+                            <img src="./img/2.jpg" alt="" class=" h-100 w-50 cover position-l r-r-30">
+                        </div>
+                        <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
+                            <h4 class="color-crimson fs-30 mb-10">Çaldıran Döyüşü</h4>
+                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                        </div>
+                    </div>
+                    <div class="card basis-20 h-80 relative">
+                        <div class="card_front w-100 h-100 absolute top-0 left-0 flex">
+                            <img src="./img/5.jpg" alt="" class=" h-100 w-50 cover position-r r-l-30">
+                            <img src="./img/6.jpg" alt="" class=" h-100 w-50 cover position-l r-r-30">
+                        </div>
+                        <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
+                            <h4 class="color-crimson fs-30 mb-10">Iraqeyn Döyüşü</h4>
+                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                        </div>
+                    </div>
+                    <div class="card basis-20 h-80 relative">
+                        <div class="card_front w-100 h-100 absolute top-0 left-0 flex">
+                            <img src="./img/8.jpg" alt="" class=" h-100 w-50 cover position-r r-l-30">
+                            <img src="./img/7.jpg" alt="" class=" h-100 w-50 cover position-l r-r-30">
+                        </div>
+                        <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
+                            <h4 class="color-crimson fs-30 mb-10">Bagdad Döyüşü</h4>
+                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                        </div>
+                    </div>
+                    <div class="card basis-20 h-80 relative">
+                        <div class="card_front w-100 h-100 absolute top-0 left-0 flex">
+                            <img src="./img/9.jpg" alt="" class=" h-100 w-50 cover position-r r-l-30">
+                            <img src="./img/10.jpg" alt="" class=" h-100 w-50 cover position-l r-r-30">
+                        </div>
+                        <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
+                            <h4 class="color-crimson fs-30 mb-10">Tebriz Döyüşü</h4>
+                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="basis-20 bg-008074bd">
                 <div class="container">
