Proyektin animasiya hissesine bezi elaveler edildi

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
                             <h4 class="color-crimson fs-30 mb-10">Çaldıran Döyüşü</h4>
-                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                            <p class="color-fff">Çaldıran Muharebesi, Osmanlı padişahı I. Selim ile Safevi hükümdarı Şah İsmail arasında 23 Ağustos 1514'te, günümüzde İran sınırları içinde yer alan Maku şehri yakınlarındaki Çaldıran Ovası'nda yapılan meydan muharebesidir. Muharebe, Osmanlı Devleti'nin kesin zaferiyle sonuçlanmıştır.</p>
                         </div>
                     </div>
                     <div class="card basis-20 h-80 relative">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
                             <h4 class="color-crimson fs-30 mb-10">Iraqeyn Döyüşü</h4>
-                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                            <p class="color-fff">Osmanlı ordusunun doğuya yönelik en büyük ve en uzun süreli askerî harekâtlarından biridir. Irâk-ı Acem olarak adlandırılan İran'ın kuzeybatı kesimiyle, Irâk-ı Arap olarak adlandırılan Bağdat ve yöresine girilmesi sebebiyle tarihi kaynaklarda Irakeyn (İki Irak) Seferi olarak adlandırılmıştır.</p>
                         </div>
                     </div>
                     <div class="card basis-20 h-80 relative">
@@ -76,7 +76,7 @@
                         </div>
                         <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
                             <h4 class="color-crimson fs-30 mb-10">Bagdad Döyüşü</h4>
-                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                            <p class="color-fff">Bağdat Seferi, 1623-1639 Osmanlı-Safevi Savaşı'nın başında 1624 yılında Safevilıların eline geçen Bağdat'ın geri alınması amacıyla padişah IV. Murat'ın 1638-39 yıllarında Bağdat üzerine düzenlediği seferdir.</p>
                         </div>
                     </div>
                     <div class="card basis-20 h-80 relative">
@@ -86,7 +86,7 @@
                         </div>
                         <div class="card_back w-100 h-100 absolute top-0 left-0 ff-Kalam flex column ai-center jc-center px-20 justify bg-blue r-30">
                             <h4 class="color-crimson fs-30 mb-10">Tebriz Döyüşü</h4>
-                            <p class="color-fff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, ipsa! Eaque repudiandae quam laborum veniam quidem neque autem suscipit? Amet nostrum laborum placeat, deserunt quis quia facilis expedita ipsum. Excepturi inventore, quam magni harum labore qui, ex repudiandae ipsa nemo iusto quo, exercitationem quae eligendi adipisci tempore laborum libero unde!</p>
+                            <p class="color-fff">Tebriz Seferi, 1603-1612 Osmanlı-Safevi Savaşı'nda bir evre. Kuyucu Murat Paşa komutasındaki Türk ordusu Tebriz'e kadar ilerleyip Acıçay civarında İran ordusuyla karşı karşıya geldiyse de taraflar arasında herhangi bir çarpışma olmadı ve Türk ordusu kışlamak üzerine geri çekildi.1612 yılında dokuz yıldır süren savaşa son veren Nasuh Paşa Antlaşması imzalandı.</p>
                         </div>
                     </div>
                 </div>
